# rtiow-rust

./: .gitignore  Cargo.toml  README.md
benches/: scene.rs
src/: aabb.rs  bvh.rs  camera.rs  lib.rs  main.rs  material.rs  object.rs  perlin.rs  ray.rs  texture.rs  vec3.rs
