[package]
name = "rtiow"
version = "0.1.0"
authors = ["cbiffle <cbiffle@x.team>"]
edition = "2018"

[dependencies]
lazy_static = "1.3"
rand = "0.6.5"
rayon = "1.0"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "scene"
harness = false

[profile.release]
debug = true

[profile.bench]
debug = true
